# family-tree-vis

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  sample.yaml
data/: sazae.yaml
src/: builder.py  main.py  parser.py
